[gd_scene load_steps=3 format=3 uid="uid://crry7pcjo62je"]

[ext_resource type="Script" path="res://Scripts/Menu/endscreen.gd" id="1_hv8am"]
[ext_resource type="Texture2D" uid="uid://dfng1wu8hu7wh" path="res://Textures/Menu/victory.png" id="2_dugxi"]

[node name="CanvasLayer" type="CanvasLayer" node_paths=PackedStringArray("test_box", "submit_button", "feedback_label")]
script = ExtResource("1_hv8am")
test_box = NodePath("Control/VBoxContainer/HBoxContainer/LineEdit")
submit_button = NodePath("Control/VBoxContainer/HBoxContainer/SubmitButton")
feedback_label = NodePath("Control/VBoxContainer/Label")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 1152.0
offset_bottom = 645.0
size_flags_horizontal = 6
size_flags_vertical = 6

[node name="VBoxContainer2" type="VBoxContainer" parent="Control"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_right = 20.0
offset_bottom = 40.0
grow_horizontal = 2

[node name="Victory" type="Sprite2D" parent="Control/VBoxContainer2"]
position = Vector2(19, 147)
scale = Vector2(1.863, 2)
texture = ExtResource("2_dugxi")

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -156.0
offset_top = -22.5
offset_right = 156.0
offset_bottom = 177.5
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="Control/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Control/VBoxContainer"]
layout_mode = 2

[node name="LineEdit" type="LineEdit" parent="Control/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
placeholder_text = "name"

[node name="SubmitButton" type="Button" parent="Control/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "submit score"

[node name="MenuButton" type="Button" parent="Control/VBoxContainer"]
layout_mode = 2
text = "menu"

[node name="QuitButton" type="Button" parent="Control/VBoxContainer"]
layout_mode = 2
text = "exit"

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[connection signal="pressed" from="Control/VBoxContainer/HBoxContainer/SubmitButton" to="." method="_on_submit_button_pressed"]
[connection signal="pressed" from="Control/VBoxContainer/MenuButton" to="." method="_on_menu_button_pressed"]
[connection signal="pressed" from="Control/VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
